--- a/footer.html
+++ b/footer.html
@@ -14,6 +14,6 @@
     <a href="https://github.com/SchmidtPaul/" class="fa fa-github" style="color: #003f75ff;"></a>
 </p>
 
-<img src="https://hitcounter.pythonanywhere.com/count/tag.svg?url=https%3A%2F%2Fschmidtpaul.github.io%2FMMFAIR%2Findex.html" alt="Hits" class="center">
+<img src="https://hitcounter.pythonanywhere.com/count/tag.svg?url=https%3A%2F%2Fschmidtpaul.github.io%2FDSFAIR%2F" alt="Hits" class="center">
 
 &nbsp;
