--- a/index.html
+++ b/index.html
@@ -365,12 +365,12 @@ div.tocify {
 
 <div id="hi-there" class="section level1 tabset tabset-fade tabset-pills">
 <h1>Hi there!</h1>
-<p>This is a project under constrcution.</p>
+<p>This is a github page under construction.</p>
 </div>
 <div id="approach" class="section level1">
 <h1>Approach</h1>
-<p>Where possible, we try to use example data/analyses for our chapters that have been published in peer-reviewed journals.</p>
-<p>In terms of R syntax, we generally try to follow the approach presented on the <a href="https://r4ds.had.co.nz/" target="_blank">“R for Data Science” website</a>, making use of:</p>
+<p>Where possible, I try to use example data/analyses for our chapters that have been published in peer-reviewed journals or in university lecture course material.</p>
+<p>In terms of R syntax, I generally try to follow the approach presented on the <a href="https://r4ds.had.co.nz/" target="_blank">“R for Data Science” website</a>, making use of:</p>
 <p><a href="https://CRAN.R-project.org/package=dplyr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/dplyr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=ggplot2"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/ggplot2.png" width="80"></a> <a href="https://r4ds.had.co.nz/pipes.html"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/pipe.png" width="80"></a> <a href="https://CRAN.R-project.org/package=purrr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/purrr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=scales"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/scales.png" width="80"></a> <a href="https://CRAN.R-project.org/package=stringr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/stringr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=tibble"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tibble.png" width="80"></a> <a href="https://CRAN.R-project.org/package=tidyr"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tidyr.png" width="80"></a> <a href="https://CRAN.R-project.org/package=tidyverse"><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/PNG/tidyverse.png" width="80"></a></p>
 </div>
 
@@ -390,7 +390,7 @@ div.tocify {
     <a href="https://github.com/SchmidtPaul/" class="fa fa-github" style="color: #003f75ff;"></a>
 </p>
 
-<img src="https://hitcounter.pythonanywhere.com/count/tag.svg?url=https%3A%2F%2Fschmidtpaul.github.io%2FMMFAIR%2Findex.html" alt="Hits" class="center">
+<img src="https://hitcounter.pythonanywhere.com/count/tag.svg?url=https%3A%2F%2Fschmidtpaul.github.io%2FDSFAIR%2F" alt="Hits">
 
 &nbsp;
 
