--- a/index.html
+++ b/index.html
@@ -397,6 +397,9 @@ div.tocify {
     <li>
       <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
     </li>
+    <li>
+      <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
+    </li>
   </ul>
 </li>
       </ul>
