--- a/RCBD_ClewerScarisbrick2001.html
+++ b/RCBD_ClewerScarisbrick2001.html
@@ -496,6 +496,21 @@ div.tocify {
     <li>
       <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
     </li>
+    <li>
+      <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Summaries
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="DesigningExperiments.html">Designing experiments</a>
+    </li>
   </ul>
 </li>
       </ul>
