--- a/index.html
+++ b/index.html
@@ -395,6 +395,9 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="CRD_Mead1993.html">CRD_Mead1993</a>
+    </li>
+    <li>
       <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
     </li>
     <li>
