--- a/DesigningExperiments.html
+++ b/DesigningExperiments.html
@@ -500,6 +500,9 @@ div.tocify {
       <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
     </li>
     <li>
+      <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
+    </li>
+    <li>
       <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
     </li>
   </ul>
