--- a/augmented_Pattersen1994.html
+++ b/augmented_Pattersen1994.html
@@ -505,6 +505,9 @@ div.tocify {
     <li>
       <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
     </li>
+    <li>
+      <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -710,7 +713,7 @@ div.tocify {
 <pre><code>## [1] 462.0431</code></pre>
 </div>
 </div>
-<p>As a result, we find that the model with fixed block effects has the slightly smaller s.e.d. and is therefore more accurate in terms of comparing genotypes.</p>
+<p>As a result, we find that the model with fixed block effects has the slightly smaller s.e.d. and is therefore more precise in terms of comparing genotypes.</p>
 <div id="anova" class="section level2">
 <h2>ANOVA</h2>
 <p>Thus, we can conduct an ANOVA for this model.</p>
