--- a/index.html
+++ b/index.html
@@ -406,6 +406,9 @@ div.tocify {
     <li>
       <a href="alpha_JohnWilliams1995.html">alpha_JohnWilliams1995</a>
     </li>
+    <li>
+      <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
