--- a/index.html
+++ b/index.html
@@ -409,6 +409,9 @@ div.tocify {
     <li>
       <a href="rowcol_KemptonFox1997.html">rowcol_KemptonFox1997</a>
     </li>
+    <li>
+      <a href="splitplot_GomezGomez1984.html">splitplot_GomezGomez1984</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
