--- a/CRD_Mead1993.html
+++ b/CRD_Mead1993.html
@@ -753,6 +753,27 @@ div.tocify {
 </ul>
 </div>
 </div>
+<div id="exercises" class="section level1">
+<h1>Exercises</h1>
+<div id="exercise-1" class="section level2">
+<h2>Exercise 1</h2>
+<p>This example is taken from <em>“Example 5.4”</em> of the course material <a href="https://www.uni-hohenheim.de/en/module-catalogue/modul/quantitative-methods-in-biosciences-3402-420" target="_blank">“Quantitative Methods in Biosciences (3402-420)”</a> by <a href="https://www.uni-hohenheim.de/organisation?tx_base_lsfcontentadmin%5BlsfPerson%5D=6257" target="_blank">Prof. Dr. Hans-Peter Piepho</a>. It considers data published in <a href="https://www.routledge.com/Statistical-Methods-in-Agriculture-and-Experimental-Biology/Mead/p/book/9781584881872" target="_blank">Mead et al. (1993, p.54)</a>. The percentage moisture content is determined from multiple samples for each of four different soils. Notice that for this dataset you have no information on any specific field trial layout (<em>i.e.</em> <code>row</code> or <code>col</code> column are not present in the dataset). Therefore you should skip trying to create a field layout with <code>desplot()</code> and instead focus on the following:</p>
+<ul>
+<li>Explore the data
+<ul>
+<li>How many samples per soil were taken?</li>
+<li>Which soil has the highest value for moisture?</li>
+<li>Draw a plot with moisture values per soil</li>
+</ul></li>
+<li>Analyze
+<ul>
+<li>Compute an ANOVA</li>
+<li>Perform multiple (mean) comparisons using the LSD test/t-test.</li>
+</ul></li>
+<li>Repeat the analysis, but this time remove all moisture values larger than 12 at the very beginning.</li>
+</ul>
+</div>
+</div>
 
 &nbsp;
 <hr />
