--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ div.tocify {
 
 <div id="hi-there" class="section level1 tabset tabset-fade tabset-pills">
 <h1>Hi there!</h1>
-<p>This is a github page under construction.</p>
+<p>This is a github page under construction. It contains a collection of example analyses that are typical in agricultural sciences or similar life science fields.</p>
 </div>
 <div id="approach" class="section level1">
 <h1>Approach</h1>
