--- a/DesigningExperiments.html
+++ b/DesigningExperiments.html
@@ -693,8 +693,8 @@ div.tocify {
 <a class="sourceLine" id="cb4-16" title="16">        <span class="dt">data =</span> rcbd_out<span class="op">$</span>bookRowCol,</a>
 <a class="sourceLine" id="cb4-17" title="17">        <span class="dt">main =</span> <span class="st">&quot;randomized complete block design&quot;</span>, </a>
 <a class="sourceLine" id="cb4-18" title="18">        <span class="dt">show.key =</span> T, <span class="dt">key.cex =</span> <span class="fl">0.5</span>)</a></code></pre></div>
-<pre><code>## Warning in if (class(data) == &quot;formula&quot;) {: the condition has length &gt; 1 and only the
-## first element will be used</code></pre>
+<pre><code>## Warning in if (class(data) == &quot;formula&quot;) {: the condition has length &gt; 1 and only
+## the first element will be used</code></pre>
 <p><img src="DesigningExperiments_files/figure-html/unnamed-chunk-5-1.png" width="480" style="display: block; margin: auto;" /></p>
 </div>
 <div id="latin-square-design" class="section level2">
