--- a/augmented_Pattersen1994.html
+++ b/augmented_Pattersen1994.html
@@ -674,8 +674,8 @@ div.tocify {
 <a class="sourceLine" id="cb5-10" title="10">        <span class="dt">text =</span> gen, <span class="dt">cex =</span> <span class="dv">1</span>, <span class="dt">shorten =</span> <span class="st">&quot;no&quot;</span>, <span class="co"># show genotype names per plot</span></a>
 <a class="sourceLine" id="cb5-11" title="11">        <span class="dt">out1 =</span> block,                        <span class="co"># lines between complete blocks/replicates</span></a>
 <a class="sourceLine" id="cb5-12" title="12">        <span class="dt">main =</span> <span class="st">&quot;Field layout&quot;</span>, <span class="dt">show.key =</span> F) <span class="co"># formatting</span></a></code></pre></div>
-<pre><code>## Warning in if (class(data) == &quot;formula&quot;) {: the condition has length &gt; 1 and only the
-## first element will be used</code></pre>
+<pre><code>## Warning in if (class(data) == &quot;formula&quot;) {: the condition has length &gt; 1 and only
+## the first element will be used</code></pre>
 <p><img src="augmented_Pattersen1994_files/figure-html/unnamed-chunk-5-1.png" width="672" style="display: block; margin: auto;" /></p>
 <p>We could also have a look at the arithmetic means and standard deviations for yield per genotype (gen) or block (inc.block). It must be clear, however, that except for the standards (<code>st</code>, <code>ci</code>, <code>wa</code>), there is always only a single value per genotype, so that the mean simply is that value and a standard error cannot be calculated at all.</p>
 <div class="row">
