--- a/0contactinfo.html
+++ b/0contactinfo.html
@@ -503,7 +503,7 @@ p.small {line-height: 1;}
 <p class="small">
 <p><i class="fa fa-home" style="color: #003f75ff;"> </i> Hamburg, Germany </br></p>
 <p>Contact </br> <a href="mailto:schmidtpaul1989@outlook.com"> <i class="fa fa-envelope" style="color: #003f75ff;"> </i> schmidtpaul1989@outlook.com </a> </br> <a href="https://github.com/SchmidtPaul/"> <i class="fa fa-github" style="color: #003f75ff;"> </i> GitHub </a> </br> <a href="https://www.linkedin.com/in/schmidtpaul1989/"> <i class="fa fa-linkedin" style="color: #003f75ff;"> </i> LinkedIn </a> </br> <a href="https://www.researchgate.net/profile/Paul_Schmidt17"> <i class="fa fa-pencil" style="color: #003f75ff;"> </i> ResearchGate </a> </br> <a href="https://www.xing.com/profile/Paul_Schmidt393/cv"> <i class="fa fa-xing" style="color: #003f75ff;"> </i> Xing </a></p>
-<p>Websites </br> <a href="https://schmidtpaul.github.io/crashcouRse/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> CrashcouRse </a> </br> <a href="https://schmidtpaul.github.io/DSFAIR/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> DSFAIR: Data Science for Agriculture in R </a> </br> <a href="https://schmidtpaul.github.io/MMFAIR/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> MMFAIR: Mixed Models for Agriculture in R </a> </br></p>
+<p>Websites </br> <a href="https://schmidtpaul.github.io/crashcouRse/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> CrashcouRse </a> </br> <a href="https://schmidtpaul.github.io/DSFAIR/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> DSFAIR: Data Science for Agriculture in R </a> </br> <a href="https://schmidtpaul.github.io/MMFAIR/"> <i class="fa fa-window-maximize" style="color: #003f75ff;"> </i> MMFAIR: <img src="https://github.com/SchmidtPaul/MMFAIR/blob/master/img/logo/favicon-16x16.png"/> Mixed Models for Agriculture in R </a> </br></p>
 </p>
 <table class="table" style="margin-left: auto; margin-right: auto;">
 <thead>
@@ -831,6 +831,9 @@ Universität Hohenheim, Stuttgart
     <a href="https://github.com/SchmidtPaul/" class="fa fa-github" style="color: #003f75ff;"></a>
 </p>
 
+<style>
+img {border-radius: 0%;}
+</style>
 <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fschmidtpaul.github.io%2FDSFAIR%2F&count_bg=%23003F75&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" class="center"/></a>
 
 &nbsp;
