--- a/augmented_Pattersen1994.html
+++ b/augmented_Pattersen1994.html
@@ -572,6 +572,9 @@ div.tocify {
       <a href="RCBD_ClewerScarisbrick2001.html">RCBD_ClewerScarisbrick2001</a>
     </li>
     <li>
+      <a href="latsquare_Bridges1989.html">latsquare_Bridges1989</a>
+    </li>
+    <li>
       <a href="augmented_Pattersen1994.html">augmented_Pattersen1994</a>
     </li>
     <li>
