all examples purled

--- a/latsquare_Bridges1989.html
+++ b/latsquare_Bridges1989.html
@@ -843,6 +843,12 @@ div.tocify {
 <li>The main effect of rowF is not significant (F(3, 6) = 3.76, p = 0.079) and can be considered as large (partial omega squared = 0.45).</li>
 <li>The main effect of colF is not significant (F(3, 6) = 2.93, p = 0.122) and can be considered as large (partial omega squared = 0.37).</li>
 </ul>
+<p><strong>R-Code and exercise solutions</strong></p>
+<p>Please <a href="https://github.com/SchmidtPaul/DSFAIR/tree/master/Rpurl" target="_blank">click here</a> to find a folder with <code>.R</code> files. Each file contains</p>
+<ul>
+<li>the entire R-code of each example combined, including</li>
+<li>solutions to the respective exercise(s).</li>
+</ul>
 </div>
 </div>
 
