--- a/subsampling_Piepho1997.html
+++ b/subsampling_Piepho1997.html
@@ -751,6 +751,12 @@ div.tocify {
 ## Conf-level adjustment: sidak method for 3 estimates 
 ## P value adjustment: tukey method for comparing a family of 3 estimates 
 ## significance level used: alpha = 0.05</code></pre>
+<p><strong>R-Code and exercise solutions</strong></p>
+<p>Please <a href="https://github.com/SchmidtPaul/DSFAIR/tree/master/Rpurl" target="_blank">click here</a> to find a folder with <code>.R</code> files. Each file contains</p>
+<ul>
+<li>the entire R-code of each example combined, including</li>
+<li>solutions to the respective exercise(s).</li>
+</ul>
 </div>
 </div>
 
